# final-project-data-processing-JL-IA

./: .readthedocs.yaml  LICENSE.txt  Proyecto final.ipynb  README.md  main.py  project copy.py  pyproject.toml  requirements.txt  results.txt  test (1).ipynb  test.ipynb  test.py  test_2.py
notebooks/: Notebook_proyecto.ipynb  Project.ipynb  proyecto_v3.ipynb  test.ipynb
recipe_project/: __init__.py.py  auxiliar.py  main.py  model_trainer copy.py  model_trainer.py  processing.py  recipe_processor.py  vectorization.py  visualization.py  visualizations.py
