[tool.poetry]
name = "final-project-data-processing-jl-ia"
version = "0.1.0"
description = "Final proyect of the Data Processing subject from uc3m, made by Jon Lejardi and Iker Aldasoro"
authors = ["Ikerald <ikeraldasorot@gmail.com>, Lejardi <jonlejajeri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
